; ModuleID = '/home/carl/AnghaBench/kphp-kdb/vkext/extr_vkext_schema_memcache.c_tl_fun_get_by_name.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/vkext/extr_vkext_schema_memcache.c_tl_fun_get_by_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }
%struct.tl_combinator = type { i32 }
%struct.hash_elem_tl_fun_name = type { %struct.tl_combinator* }

@cur_config = common dso_local global %struct.TYPE_3__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.tl_combinator* @tl_fun_get_by_name(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.tl_combinator, align 4
  %4 = alloca %struct.hash_elem_tl_fun_name*, align 8
  store i32 %0, i32* %2, align 4
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** @cur_config, align 8
  %6 = call i32 @assert(%struct.TYPE_3__* %5)
  %7 = load i32, i32* %2, align 4
  %8 = getelementptr inbounds %struct.tl_combinator, %struct.tl_combinator* %3, i32 0, i32 0
  store i32 %7, i32* %8, align 4
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** @cur_config, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call %struct.hash_elem_tl_fun_name* @hash_lookup_tl_fun_name(i32 %11, %struct.tl_combinator* %3)
  store %struct.hash_elem_tl_fun_name* %12, %struct.hash_elem_tl_fun_name** %4, align 8
  %13 = load %struct.hash_elem_tl_fun_name*, %struct.hash_elem_tl_fun_name** %4, align 8
  %14 = icmp ne %struct.hash_elem_tl_fun_name* %13, null
  br i1 %14, label %15, label %19

15:                                               ; preds = %1
  %16 = load %struct.hash_elem_tl_fun_name*, %struct.hash_elem_tl_fun_name** %4, align 8
  %17 = getelementptr inbounds %struct.hash_elem_tl_fun_name, %struct.hash_elem_tl_fun_name* %16, i32 0, i32 0
  %18 = load %struct.tl_combinator*, %struct.tl_combinator** %17, align 8
  br label %20

19:                                               ; preds = %1
  br label %20

20:                                               ; preds = %19, %15
  %21 = phi %struct.tl_combinator* [ %18, %15 ], [ null, %19 ]
  ret %struct.tl_combinator* %21
}

declare dso_local i32 @assert(%struct.TYPE_3__*) #1

declare dso_local %struct.hash_elem_tl_fun_name* @hash_lookup_tl_fun_name(i32, %struct.tl_combinator*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
